--- a/src/App.css
+++ b/src/App.css
@@ -27,24 +27,21 @@
 .App-link {
   color: #61dafb;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App-logo {
+  width: 200px; /* Adjust the width as needed */
+  height: auto;
 }
+
 
 body {
   margin: 0;
   padding: 0;
   font-family: Arial, sans-serif;
+  background-color: #000000;
 }
 
 header {
-  background-color: #333;
+  background-color: #000000;
   color: #fff;
   padding: 20px;
 }
